# ChangeLog for app-emacs/chess
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/chess/ChangeLog,v 1.17 2007/09/24 12:57:33 ulm Exp $

*chess-2.0_beta6 (24 Sep 2007)
*chess-2.0_beta5-r4 (24 Sep 2007)

  24 Sep 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/2.0_beta6-chess-pos-move-gentoo.patch, -chess-2.0_beta5-r3.ebuild,
  +chess-2.0_beta5-r4.ebuild, +chess-2.0_beta6.ebuild:
  Version bump. 2.0_beta6 compiles and runs with both Emacs 21 and 22 now.
  Fix assert problem in chess-pos-move that occured for the start position.
  Remove festival USE flag since it changes nothing for the installed package.
  Install pixmap files in correct location. Remove die command from epatch.

  23 Sep 2007; Ulrich Mueller <ulm@gentoo.org> -chess-2.0_beta5-r1.ebuild,
  chess-2.0_beta5-r3.ebuild:
  Remove previous revision. Add a die message; minor cosmetic changes.

*chess-2.0_beta5-r3 (02 Jul 2007)

  02 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  -chess-2.0_beta5-r2.ebuild, +chess-2.0_beta5-r3.ebuild:
  replaced some manual copy actions by proper eutils functions
  Added info messages to make waiting times a bit shorter
  removed hard dependency on app-editors/emacs-cvs to new
  style dependency by NEED_EMACS

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  chess-2.0_beta5.ebuild, chess-2.0_beta5-r1.ebuild,
  chess-2.0_beta5-r2.ebuild:
  added FDL to LICENSE

*chess-2.0_beta5-r2 (27 Feb 2007)

  27 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/51chess-gentoo.el, +chess-2.0_beta5-r2.ebuild:
  revision bump: Have a smoother init file, install sounds and icons in better
  suited directories; fixes bug 168550, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

*chess-2.0_beta5-r1 (09 Feb 2007)

  09 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  chess-2.0_beta5.ebuild, +chess-2.0_beta5-r1.ebuild:
  added some quotes overall; revision bump: dependency on emacs-cvs because of