@@ -13,10 +13,10 @@ AUX 50chess-gentoo.el 436 RMD160 8f938fe4fd9cef37c42a986b1980e24bdeb6dc8a SHA1 7
 MD5 9126e1d41dd1cb51f77ee832df3a9a85 files/50chess-gentoo.el 436
 RMD160 8f938fe4fd9cef37c42a986b1980e24bdeb6dc8a files/50chess-gentoo.el 436
 SHA256 df4666c3378537325f21480b3e9cae3eb7803b78330586162b02120197887b25 files/50chess-gentoo.el 436
-AUX 51chess-gentoo.el 598 RMD160 d099853696daa84892b6e4b07e7f3524a623255c SHA1 880a02b8d69e431b051c9ebcf9e5c9ba10a70c31 SHA256 c058f854ddcf9a93438839d312b14c24f37df22848e54e71a11a10a8fd31ca44
-MD5 686ee11001c076193a89060369f89c01 files/51chess-gentoo.el 598
-RMD160 d099853696daa84892b6e4b07e7f3524a623255c files/51chess-gentoo.el 598
-SHA256 c058f854ddcf9a93438839d312b14c24f37df22848e54e71a11a10a8fd31ca44 files/51chess-gentoo.el 598
+AUX 51chess-gentoo.el 1293 RMD160 73851af6e700be9e5eda5909a62ce808b87e7ec5 SHA1 39a50ee9437db162e578932b36f87da7a206e52a SHA256 1c24453bf76b796afab54eae46fb8dfd664cded5576a5fa6a48e7508f7dae8f2
+MD5 0311fcff045e88f1200938d1cbf3bb66 files/51chess-gentoo.el 1293
+RMD160 73851af6e700be9e5eda5909a62ce808b87e7ec5 files/51chess-gentoo.el 1293
+SHA256 1c24453bf76b796afab54eae46fb8dfd664cded5576a5fa6a48e7508f7dae8f2 files/51chess-gentoo.el 1293
 DIST chess-2.0b5.tar.bz2 620380 RMD160 e98e4b91471588ad7278bdae3e89166acce55fa2 SHA1 d0065d1f5eb9ea416faafc584486681e2e3478dc SHA256 6e204e0381191eededd5b9e8c7811e093c9e0ce62c20979e3d15b52681bdd9f1
 DIST chess-2.0b6.tar.gz 383951 RMD160 cce4119f8b91c79ea83ea854b53cf3518e73f4a8 SHA1 ed8b8a076c72640a79d9e2181295e2847ca0eb14 SHA256 4d9938365965c109fc832109eec25d0a79d8c4b1ebd2025a4939ad88e75a396e
 DIST emacs-chess-pieces-2.0.tar.bz2 297687 RMD160 68caefa70dfe2071c1a5c3ce1564fec170be2a1c SHA1 fe8eef6fc8a64506c8d31a1c419128c70027ddf8 SHA256 c47278127ebcd8b4503fe4058317436757f795b1404cc02b883dce215eb1c1b0
@@ -33,10 +33,10 @@ EBUILD chess-2.0_beta6.ebuild 1192 RMD160 b8e874ce9b59b351333b9542e3e2992cc7e7a0
 MD5 e4653cf492855953a408a9273ad3de32 chess-2.0_beta6.ebuild 1192
 RMD160 b8e874ce9b59b351333b9542e3e2992cc7e7a0c4 chess-2.0_beta6.ebuild 1192
 SHA256 9960b06350a7df1e8732858b0f58d1685b6fc04b8d91fbe2e80d0318b34bdc63 chess-2.0_beta6.ebuild 1192
-MISC ChangeLog 3044 RMD160 f3497ee267318dc8f868bab1f890d4750a6aa47f SHA1 c1a782180bc9de2c40e2d2b94aedd91ede6d8ff1 SHA256 6eba679dc2c546a868d04de06da7fbd7fdc6485124e1c6eabe51be532004e377
-MD5 1a3bc667ac009d2b9bfb9f3c0015c986 ChangeLog 3044
-RMD160 f3497ee267318dc8f868bab1f890d4750a6aa47f ChangeLog 3044
-SHA256 6eba679dc2c546a868d04de06da7fbd7fdc6485124e1c6eabe51be532004e377 ChangeLog 3044
+MISC ChangeLog 3152 RMD160 0e30fab60ba8b3b244a52ccded617d09ff0f60c0 SHA1 d488b21f788d8a99cfcda40407233d99e5014beb SHA256 282c30cedd78398976bd777a421a8da65ff12d2bfe423f6ff2ef765f186f0369
+MD5 b0f4e70fa6baa4a71b44f313e8deb671 ChangeLog 3152
+RMD160 0e30fab60ba8b3b244a52ccded617d09ff0f60c0 ChangeLog 3152
+SHA256 282c30cedd78398976bd777a421a8da65ff12d2bfe423f6ff2ef765f186f0369 ChangeLog 3152
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -53,7 +53,7 @@ SHA256 94c0d527eab98942fdc6d080207cccbc16bb472be916a907608178612a9e9c68 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFG97ROOeoy/oIi7uwRAgQIAJ9sRvBKVY4A0wG3nq+QutDFsTOj/wCg2ND2
-JJR5bF0g/ws45W+bEYcDpPo=
-=jaTb
+iD8DBQFG+ArJOeoy/oIi7uwRApNnAJ9lWpENH8I18fKxz4iTGL8H9PlCcACgoknI
+V9OFyAmN8FMQi+FlXEGi3UE=
+=vcTs
 -----END PGP SIGNATURE-----
