@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/chess
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/chess/ChangeLog,v 1.17 2007/09/24 12:57:33 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/chess/ChangeLog,v 1.18 2007/09/24 19:06:33 ulm Exp $
+
+  24 Sep 2007; Ulrich Mueller <ulm@gentoo.org> files/51chess-gentoo.el:
+  Additional autoload definitions.
 
 *chess-2.0_beta6 (24 Sep 2007)
 *chess-2.0_beta5-r4 (24 Sep 2007)
